Super simplified the applet to use a poll-based pull from an URL instead of push from the server. Things are a LOT simpler, and this will solve firewall problems too, as communication can go via HTTP. DamageControl will write files to disk, and their contents will instantly show up in the applet.