@@ -3,17 +3,20 @@ package com.thoughtworks.damagecontrol.swing;
 import junit.framework.TestCase;
 import junit.framework.AssertionFailedError;
 
+import javax.swing.*;
 import java.applet.AppletStub;
 import java.applet.AppletContext;
 import java.net.URL;
 import java.net.MalformedURLException;
+import java.io.File;
+import java.awt.*;
 
 /**
  * @author Aslak Helles&oslash;y
- * @version $Revision: 1.1 $
+ * @version $Revision: 1.2 $
  */
 public class MonitorAppletTestCase extends TestCase {
-    public void testInitConnects() {
+    public void testInitConnects() throws InterruptedException {
         MonitorApplet monitorApplet = new MonitorApplet();
         monitorApplet.setStub(new AppletStub(){
             public boolean isActive() {
@@ -37,12 +40,13 @@ public class MonitorAppletTestCase extends TestCase {
             }
 
             public String getParameter(String name) {
-                return "4712";
+                assertEquals("indexPath", name);
+                return "target/testdata.txt";
             }
 
             private URL getURL() {
                 try {
-                    return new URL("http://localhost/");
+                    return new File(".").toURL();
                 } catch (MalformedURLException e) {
                     throw new AssertionFailedError();
                 }
@@ -51,5 +55,10 @@ public class MonitorAppletTestCase extends TestCase {
         });
 
         monitorApplet.init();
+        // yeah yeah, it's not nice to sleep in tests.
+        Thread.sleep(1000);
+        BuildPanel buildPanel = (BuildPanel) monitorApplet.getContentPane().getComponent(0);
+        JTextArea textArea = buildPanel.getProgressArea();
+        assertEquals("damagecontrol", textArea.getText());
     }
 }
